--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,13 +30,13 @@
       <div class="row">
         <div class="col-md-6">
           <form class="form-inline">
-            <div class="input-group input-group-lg">
+            <div class="input-group">
               <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
               <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
             </div>
           </form>
         </div>
-        <div class="col-md-6 text-right"><a class="btn btn-lg btn-secondary" href="#">Eventos</a><a class="btn btn-primary btn-lg" href="#">Iniciar sesión</a><a class="btn btn-lg btn-light" href="#">Regístrate</a></div>
+        <div class="col-md-6 text-right"><a class="btn btn-secondary" href="index.html">Eventos</a><a class="btn btn-primary" href="login.html">Iniciar sesión</a><a class="btn btn-light" href="signup.html">Regístrate</a></div>
       </div>
     </div>
   </div>
