--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -36,7 +36,7 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 text-right"><a class="btn btn-secondary" href="blank.html">Eventos</a><a class="btn btn-primary" href="login.html">Iniciar sesión</a><a class="btn btn-light" href="signup.html">Regístrate</a></div>
+        <div class="col-md-6 text-right"><a class="btn btn-secondary" href="index.html">Eventos</a><a class="btn btn-primary" href="login.html">Iniciar sesión</a><a class="btn btn-light" href="signup.html">Regístrate</a></div>
       </div>
     </div>
   </div>
