--- a/FrontEnd/compra.html
+++ b/FrontEnd/compra.html
@@ -36,7 +36,7 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 text-right"><a class="btn btn-secondary" href="index.html">Eventos</a><a class="btn btn-primary" href="login.html">Iniciar sesión</a><a class="btn btn-light" href="signup.html">Regístrate</a></div>
+        <div class="col-md-6 text-right"><a class="btn btn-secondary" href="index.html" style="">Eventos</a><a class="btn btn-primary" href="login.html">Iniciar sesión</a><a class="btn btn-light" href="signup.html">Regístrate</a></div>
       </div>
     </div>
   </div>
@@ -44,27 +44,44 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2>Regístrate</h2>
+          <h2 contenteditable="true">Compra de boletos</h2>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="text-center py-0">
-    <div class="container">
       <div class="row">
-        <div class="mx-auto col-lg-6 col-10">
-          <form class="text-left">
-            <div class="form-group"> <label for="form16">Tu nombre</label> <input type="text" class="form-control" id="form16" placeholder="Johann W. Goethe"> </div>
-            <div class="form-group"> <label for="form17">Tu ID</label> <input type="text" class="form-control" id="form17" placeholder="Werther Inc."> </div>
-            <div class="form-group"> <label for="form18">Tu correo</label> <input type="email" class="form-control" id="form18" placeholder="j.goethe@werther.com"> </div>
-            <div class="form-row">
-              <div class="form-group col-md-6"> <label for="form19">Contraseña</label> <input type="password" class="form-control" id="form19" placeholder="••••"> </div>
-              <div class="form-group col-md-6"> <label for="form20">Confirmar contraseña</label> <input type="password" class="form-control" id="form20" placeholder="••••"> </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-4">Evento:</div>
+            <div class="col-md-8"></div>
+            <div class="col-md-4">Fecha:</div>
+            <div class="col-md-8"></div>
+            <div class="col-md-4">Lugar:</div>
+            <div class="col-md-8"></div>
+            <div class="col-md-4">Hora:</div>
+            <div class="col-md-8"></div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6">Seleccione localidad: </div>
+            <div class="col-md-6 text-right">
+              <div class="btn-group">
+                <button class="btn dropdown-toggle btn-primary" data-toggle="dropdown" aria-expanded="false"> Localidad </button>
+                <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);"> <a class="dropdown-item" href="#">Action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                  <div class="dropdown-divider"></div>
+                </div>
+              </div>
             </div>
-            <div class="form-group">
-              <div class="form-check"> <input class="form-check-input" type="checkbox" id="form21" value="on"> <label class="form-check-label" for="form21">Yo acepto los&nbsp;<a href="#">Terminos y Condiciones</a>&nbsp;de este servicio&nbsp;</label> </div>
-            </div> <button type="submit" class="btn btn-primary">Registrarme</button>
-          </form>
+          </div>
+          <div class="row">
+            <div class="col-md-6">Precio:</div>
+            <div class="col-md-6"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 text-right"><a class="btn btn-outline-primary" href="#">Comprar <i class="fa fa-shopping-cart fa-fw"></i> </a></div>
+          </div>
+          <div class="row"></div>
         </div>
       </div>
     </div>
